<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Tripy</string>

    <!--<string name="google_maps_key">AIzaSyDksgJ3UKTyRgtTj608Soq-qfqEMdPKS-Y</string>-->
    <string name="google_maps_key">AIzaSyBqkHQ3d0ihxoH5h6vdo5lucHMrhkLT0qA</string>
    <!--<string name="google_maps_key">AIzaSyAXp24n1kRToB3s1AHHeyiB_tQczScOC5o</string>-->

    <string name="login_email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_btn">LOGIN</string>
    <string name="remember">Remember me</string>
    <string name="forgotten_password">Forgotten password?</string>
    <string name="q">You don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="sign">Sign up</string>
    <string name="tosign">SIGN UP</string>
    <string name="fill_in">Please fill in this form to create an account!</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="email">Email</string>
    <string name="user">Username</string>
    <string name="logout">Logout</string>
    <string name="help">Help us improve</string>
    <string name="history">Sites history</string>
    <string name="updates">Keep us posted</string>
    <string name="keep_us">Give us the updates</string>
    <string name="build_track">Build route</string>
    <string name="clear_track">Clear route</string>
    <string name="update">Update</string>
    <string name="category">Choose category</string>
    <string name="filter">Filter</string>
    <string name="choose">Choose which places you want to see</string>
    <string name="simplefeedback">Please fill in simple feedback</string>
    <string name="helpustobebetter">Help us improve!</string>
    <string name="historical_sites">Historical sites</string>
    <string name="shows">Shows and exhibitions</string>
    <string name="nature">Nature reserve</string>
    <string name="agri">Agricultural tourism</string>
    <string name="observ">Observation points</string>
    <string name="stores">Stores</string>
    <string name="national">National parks</string>
    <string name="cities">Cities</string>
    <string name="beaches">Beaches</string>
    <string name="ports">Ports</string>
    <string name="meu">Museums</string>
    <string name="parks">Parks</string>
    <string name="zoo">Zoo</string>
    <string name="all">Mark all</string>
    <string name="clear">Clear all</string>
    <string name="telaviv">Tel-Aviv walks</string>
    <string name="safed">Saved walks</string>
    <string name="water">Water attraction</string>
    <string name="loading">Loading…</string>
    <string name="submit">Submit</string>
    <string name="enterfilter">Enter</string>
    <string name="enterthename">Enter the attraction name:</string>
    <string name="chooseattr">Choose kind of attraction</string>
    <string name="fillin">Fill here the updates</string>
    <string name="select">Select category</string>
    <string name="warning1">Please Enter Your Email</string>
    <string name="warning2">Please Enter Your Password</string>
    <string name="warning3">Please Enter Your First Name</string>
    <string name="warning4">Please Enter Your Last Name</string>
    <string name="warning5">Invalid email format</string>
    <string name="warning6">Please Enter Password Again</string>
    <string name="warning7">Password Did Not Match</string>
    <string name="sent">Email sent</string>
    <string name="reset">Reset</string>
    <string name="close">Close</string>
    <string name="forget">Forget password</string>
    <string name="success">Successful saved</string>
    <string name="please2">Please insert the attraction name</string>
    <string name="thank1">We saved your feedback, Thank you for your time!</string>
    <string name="thank2">We saved your updates, Thank you for your time!</string>
    <string name="please">Please select type of attraction</string>
    <string name="getDirection">Get Directions</string>
    <string name="buildYourR">Build Your Route!</string>
    <string name="moreInfo">CLick here for more info</string>
    <string name="goToURL">More info</string>
    <string name="cancel">Cancel</string>
    <string name="addToRoute">Add location to route</string>
    <string name="emptyMarkerList">Please add at least two locations to create a route</string>
    <string name="clearRouteMessage">Your route is clear</string>
</resources>