<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/homepage_background"
    android:orientation="vertical">

<!--        <LinearLayout-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:orientation="horizontal"-->
<!--            android:weightSum="2">-->
<!--            <ImageView-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:src="@drawable/ic_baseline_arrow_back_24"-->
<!--                android:id="@+id/arrowback"-->
<!--                android:layout_weight=".25"-->
<!--                android:layout_marginStart="5dp"-->
<!--                android:layout_gravity="center"-->
<!--                android:padding="15dp"/>-->
    <LinearLayout
        android:id="@+id/l1"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layoutDirection="ltr">
    <ImageView
        android:id="@+id/arrowback"
        android:layout_width="0dp"
        android:layout_weight=".30"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_baseline_arrow_back_24" />
            <TextView

                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1.7"
                android:text="@string/choose"
                android:textSize="22sp"
                android:padding="10dp"
                android:textStyle="bold"
                android:textColor="@color/purple_700"
                android:gravity="center"/>

<!--        </LinearLayout>-->
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:weightSum="3">
        <View
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="0.5"/>

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginStart="20dp"
            android:id="@+id/btnCheckAll"
            android:layout_height="wrap_content"
            android:text="@string/all"
            android:textSize="13sp"
            android:layout_marginEnd="20dp"/>


        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textSize="13sp"
            android:id="@+id/btnClearAll"
            android:layout_height="wrap_content"
            android:text="@string/clear" />
        <View
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="0.5"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:weightSum="2">
        <CheckBox
            android:id="@+id/checkBox1"
            android:layout_width="0dp"
            android:textSize="12sp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/shows"
            android:layout_marginStart="20dp"
            android:textColor="@color/purple_700"
            android:textStyle="bold"
          />

        <CheckBox
            android:textSize="12sp"
            android:id="@+id/checkBox2"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginStart="20dp"
            android:layout_height="wrap_content"
            android:text="@string/historical_sites"
            android:textColor="@color/purple_700"
            android:textStyle="bold"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:weightSum="2">
        <CheckBox
            android:layout_width="0dp"
            android:textSize="12sp"
            android:layout_weight="1"
            android:layout_marginStart="20dp"
            android:id="@+id/checkBox3"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/nature"
            android:textColor="@color/purple_700"
            android:textStyle="bold"/>
        <CheckBox
            android:layout_width="0dp"
            android:layout_marginStart="20dp"
            android:textSize="12sp"
            android:layout_weight="1"
            android:id="@+id/checkBox4"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/agri"
            android:textColor="@color/purple_700"
            android:textStyle="bold"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:weightSum="2">
        <CheckBox
            android:layout_width="0dp"
            android:textSize="12sp"
            android:layout_weight="1"
            android:layout_marginStart="20dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/observ"
            android:textColor="@color/purple_700"
            android:textStyle="bold"/>
        <CheckBox
            android:layout_width="0dp"
            android:textSize="12sp"
            android:layout_weight="1"
            android:layout_marginStart="20dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/stores"
            android:textColor="@color/purple_700"
            android:textStyle="bold"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:weightSum="2">
        <CheckBox
            android:layout_width="0dp"
            android:textSize="12sp"
            android:layout_weight="1"
            android:layout_marginStart="20dp"
            android:id="@+id/checkBox7"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/national"             android:textColor="@color/purple_700"
            android:textStyle="bold"        />
        <CheckBox
            android:layout_width="0dp"
            android:textSize="12sp"
            android:layout_weight="1"
            android:layout_marginStart="20dp"
            android:id="@+id/checkBox8"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/cities"

            android:textColor="@color/purple_700"
            android:textStyle="bold"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:weightSum="2">
        <CheckBox
            android:layout_width="0dp"
            android:textSize="12sp"
            android:layout_weight="1"
            android:layout_marginStart="20dp"
            android:id="@+id/checkBox9"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/beaches"
            android:textColor="@color/purple_700"
            android:textStyle="bold"/>
        <CheckBox
            android:layout_width="0dp"
            android:textSize="12sp"
            android:layout_weight="1"
            android:layout_marginStart="20dp"
            android:id="@+id/checkBox10"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/ports"
            android:textColor="@color/purple_700"
            android:textStyle="bold"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:weightSum="2">
        <CheckBox
            android:layout_width="0dp"
            android:textSize="12sp"
            android:layout_weight="1"
            android:layout_marginStart="20dp"
            android:id="@+id/checkBox11"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/meu"
            android:textColor="@color/purple_700"
            android:textStyle="bold"/>
        <CheckBox
            android:layout_width="0dp"
            android:textSize="12sp"
            android:layout_weight="1"
            android:layout_marginStart="20dp"
            android:id="@+id/checkBox12"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/water"
            android:textColor="@color/purple_700"
            android:textStyle="bold"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:weightSum="2">
        <CheckBox
            android:layout_width="0dp"
            android:textSize="12sp"
            android:layout_weight="1"
            android:layout_marginStart="20dp"
            android:id="@+id/checkBox13"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/zoo"
            android:textColor="@color/purple_700"
            android:textStyle="bold"/>
        <CheckBox
            android:layout_width="0dp"
            android:textSize="12sp"
            android:layout_weight="1"
            android:layout_marginStart="20dp"
            android:id="@+id/checkBox14"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/parks"
            android:textColor="@color/purple_700"
            android:textStyle="bold"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:weightSum="2">
        <CheckBox
            android:layout_width="0dp"
            android:textSize="12sp"
            android:layout_weight="1"
            android:layout_marginStart="20dp"
            android:id="@+id/checkBox15"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/safed"
            android:textColor="@color/purple_700"
            android:textStyle="bold"/>
        <CheckBox
            android:layout_width="0dp"
            android:textSize="12sp"
            android:layout_weight="1"
            android:layout_marginStart="20dp"
            android:id="@+id/checkBox16"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/telaviv"
            android:textColor="@color/purple_700"
            android:textStyle="bold"/>
    </LinearLayout>

    <Button
        android:id="@+id/filterRes"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/enterfilter"
        android:layout_gravity="center"
        android:textSize="13sp"
        android:layout_marginTop="10dp"/>

</LinearLayout>

