<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/homepage_background"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:id="@+id/fragment_login">

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="51"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="123dp"
        android:id="@+id/icon"
        android:src="@drawable/icon"/>

    <LinearLayout
        android:layout_width="275dp"
        android:layout_height="250dp"
        android:id="@+id/login_tab"
        android:background="@drawable/white_rectangle"
        android:orientation="vertical">

        <TextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/blackkkk"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_margin="10dp"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/textview"
            android:layout_marginTop="5dp"
            android:textSize="12sp"
            android:hint="@string/login_email"
            android:textColorHint="@color/grayyy"
            android:textStyle="bold"
            android:paddingStart="10dp"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/email"
            android:id="@+id/usernameLoginET"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/textview"
            android:layout_marginTop="5dp"
            android:textSize="12sp"
            android:hint="@string/password"
            android:textColorHint="@color/grayyy"
            android:textStyle="bold"
            android:paddingStart="10dp"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/password"
            android:id="@+id/passwordLoginET"
            android:inputType="textPassword"
            />

        <Button
            android:layout_gravity="center"
            android:backgroundTint="@color/green"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/login_btn"
            android:gravity="center"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:id="@+id/loginBtn"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:layout_marginStart="15dp"
                android:text="@string/forgotten_password"
                android:textSize="11sp"
                android:textStyle="bold"
                android:gravity="right"
                android:padding="5dp"
                android:textColor="@color/light_blue"
                android:id="@+id/forgottenpsw_btn"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:padding="5dp"
                android:layout_marginStart="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q"
                android:textSize="11sp"
                android:textStyle="bold"/>

            <TextView
                android:padding="2dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textSize="11sp"
                android:textStyle="bold"
                android:textColor="@color/light_blue"
                android:id="@+id/sign_up"/>
        </LinearLayout>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="324"/>

</LinearLayout>