<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HelpUsFragment"
    android:background="@drawable/homepage_background"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:id="@+id/fragment_help">
    <LinearLayout
        android:id="@+id/l1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layoutDirection="ltr"
        >

        <ImageView
            android:id="@+id/arrowback"
            android:layout_width="0dp"
            android:layout_weight=".30"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_baseline_arrow_back_24" />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:layout_height="wrap_content"
            android:text="@string/keep_us"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textColor="@color/kkkk"
            android:gravity="center"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_tab"
        android:background="@drawable/white_rectangle"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginTop="20dp">

<!--        <TextView-->
<!--            android:layout_gravity="center"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/simplefeedback"-->
<!--            android:textColor="@color/orange"-->
<!--            android:textSize="24sp"-->
<!--            android:textStyle="bold"-->
<!--            android:layout_margin="10dp"-->
<!--            />-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chooseattr"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="@color/orange"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"/>
        <Spinner
            style="@android:style/Widget.Spinner.DropDown"
            android:layout_gravity="center"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:id="@+id/dropdown"
            android:text="@string/category"
            />
    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/enterthename"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textColor="@color/orange"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"/>
            <EditText
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:id="@+id/editText"/>


        </LinearLayout>
    <TextView
        android:layout_marginTop="5dp"
        android:layout_marginBottom="2dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textColor="@color/orange"
        android:textStyle="bold"
        android:text="@string/fillin"
        android:layout_gravity="center"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/edit_text_border"
            android:gravity="start"
            android:paddingStart="5dp"
            android:paddingLeft="5dp"
            android:id="@+id/upEditText"/>

        <Button
            android:layout_gravity="center"
            android:backgroundTint="@color/orange"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/update"
            android:gravity="center"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:id="@+id/update"/>

    </LinearLayout>

</FrameLayout>