<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HelpUsFragment"
    android:background="@drawable/homepage_background"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:id="@+id/fragment_help">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/helpustobebetter"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/kkkk"
        android:layout_marginTop="60dp"
        android:gravity="center"/>
    <LinearLayout
        android:layout_width="275dp"
        android:layout_height="350dp"
        android:id="@+id/login_tab"
        android:background="@drawable/white_rectangle"
        android:orientation="vertical"
        android:layout_gravity="center">

    <TextView
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/simplefeedback"
        android:textColor="@color/orange"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_margin="10dp"
        />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/edit_text_border"
            android:gravity="start"
            android:paddingStart="5dp"
            android:paddingLeft="5dp"
            android:id="@+id/subEditText"/>

        <Button
            android:layout_gravity="center"
            android:backgroundTint="@color/orange"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/submit"
            android:gravity="center"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:id="@+id/submit"/>

    </LinearLayout>

</FrameLayout>